# engineering-practice

./: .gitignore  README.md  environment-setup.md  main.py  pyproject.toml
data-tools/: main.py  pyproject.toml
problem-solving/: containerWithMostWater.py  containsDuplicate.py  encodeDecodeStrings.py  findPivotIndex.py  mergeIntervals.py  rangeSumQueryImmutable.py  threeSum.py  twoSum.py  twoSumII.py  validAnagram.py
problem-solving/arrays-hashing/: groupAnagrams.py  longestConsecutiveSequence.py  productOfArrayExceptSelf.py  topKFrequentElements.py  validSudoku.py
problem-solving/random/: removeDuplicatesFromSortedArray.py
problem-solving/sliding-window/: bestTimeToBuyAndSellStock.py  longestSubstringWithoutRepeatingCharacters.py
problem-solving/two-pointers/: trappingRainwater.py  validPalindrome.py
quantecon/: chap3.py  main.py  pyproject.toml
