[project]
name = "engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiomentations>=0.43.1",
    "ipython>=9.14.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "kagglehub>=1.0.2",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
]
