[project]
name = "data-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
