[project]
name = "quantecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "marimo>=0.14.12",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
